--- a/index.html
+++ b/index.html
@@ -2,7 +2,13 @@
 <html lang="en">
 
 <head>
-
+  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <script>
+    (adsbygoogle = window.adsbygoogle || []).push({
+      google_ad_client: "ca-pub-2053854576450915",
+      enable_page_level_ads: true
+    });
+  </script>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
