--- a/index.html
+++ b/index.html
@@ -56,19 +56,19 @@
                 <ul class="navbar-nav">
 
                     <li class="nav-item">
-                        <a class="nav-link" rel="tooltip" title="Follow us on Twitter" data-placement="bottom" href="./wtf.html" target="_blank">
+                        <a class="nav-link" rel="tooltip" title="Follow John on Twitter" data-placement="bottom" href="./wtf.html" target="_blank">
                             <i class="fa fa-twitter"></i>
                             <p class="d-lg-none d-xl-none">Twitter</p>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" rel="tooltip" title="Like us on Facebook" data-placement="bottom" href="./wtf.html" target="_blank">
+                        <a class="nav-link" rel="tooltip" title="Like John on Facebook" data-placement="bottom" href="./wtf.html" target="_blank">
                             <i class="fa fa-facebook-square"></i>
                             <p class="d-lg-none d-xl-none">Facebook</p>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" rel="tooltip" title="Follow us on Instagram" data-placement="bottom" href="./wtf.html" target="_blank">
+                        <a class="nav-link" rel="tooltip" title="Follow John on Instagram" data-placement="bottom" href="./wtf.html" target="_blank">
                             <i class="fa fa-instagram"></i>
                             <p class="d-lg-none d-xl-none">Instagram</p>
                         </a>
